--- a/.github/workflows/production-imaging.yml
+++ b/.github/workflows/production-imaging.yml
@@ -25,9 +25,9 @@ jobs:
     - name: Install postcss-cli
       run:  npm install -D --save postcss-cli
     - name: Build Imaging
-      run: hugo --config "./config-prod-imaging.toml" -c "content/imaging" -b "https://products.aspose.com/imaging" --cleanDestinationDir --minify
+      run: hugo --config "./configs/imaging.toml" -c "content/imaging" -b "https://products.aspose.com/imaging" --cleanDestinationDir --minify
     - name: Deploy Imaging to S3
-      run: hugo deploy --config "./config-prod-imaging.toml" --maxDeletes=-1 --target "imaging" --force
+      run: hugo deploy --config "./configs/imaging.toml" --maxDeletes=-1 --target "imaging" --force
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
