--- a/.github/workflows/production-psd.yml
+++ b/.github/workflows/production-psd.yml
@@ -37,9 +37,9 @@ jobs:
         replace: "logoImageSrc=\"https://cms.admin.containerize.com/"
         include: "_index.md"
     - name: Build PSD
-      run: hugo --config "./config-prod.toml" -c "content/psd" -b "https://products.aspose.com/psd" --cleanDestinationDir --minify
+      run: hugo --config "configs/psd.toml" -b "https://products.aspose.com/psd" --cleanDestinationDir --minify
     - name: Deploy PSD to S3
-      run: hugo deploy --config "./config-prod.toml" --maxDeletes=-1 --target "psd" --force
+      run: hugo deploy --config "configs/psd.toml" --maxDeletes=-1 --target "production" --force
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
