--- a/.github/workflows/production-cad.yml
+++ b/.github/workflows/production-cad.yml
@@ -37,9 +37,9 @@ jobs:
         replace: "logoImageSrc=\"https://cms.admin.containerize.com/"
         include: "_index.md"
     - name: Build CAD
-      run: hugo --config "./config-prod.toml" -c "content/cad" -b "https://products.aspose.com/cad" --cleanDestinationDir --minify
+      run: hugo --config "configs/cad.toml" -b "https://products.aspose.com/cad" --cleanDestinationDir --minify
     - name: Deploy CAD to S3
-      run: hugo deploy --config "./config-prod.toml" --maxDeletes=-1 --target "cad" --force
+      run: hugo deploy --config "configs/cad.toml" --maxDeletes=-1 --target "production" --force
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
