--- a/.github/workflows/staging-note.yml
+++ b/.github/workflows/staging-note.yml
@@ -43,9 +43,9 @@ jobs:
         replace: "logoImageSrc=\"https://cms.admin.containerize.com/"
         include: "_index.md"
     - name: Build Note
-      run: hugo --config "./config.toml" -c "content/note" -b "https://products-qa.aspose.com/note" --cleanDestinationDir --minify
+      run: hugo --config "configs/note.toml" -b "https://products-qa.aspose.com/note" --cleanDestinationDir --minify
     - name: Deploy Note to S3
-      run: hugo deploy --config "./config.toml" --maxDeletes=-1 --target "note" --force
+      run: hugo deploy --config "configs/note.toml" --maxDeletes=-1 --target "staging" --force
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
