--- a/.github/workflows/production-omr.yml
+++ b/.github/workflows/production-omr.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Build OMR
       run: hugo --config "configs/omr.toml" -c "content/omr" -b "https://products.aspose.com/omr" --cleanDestinationDir --minify
     - name: Deploy OMR to S3
-      run: hugo deploy --config ".configs/omr.toml" --maxDeletes=-1 --target "production" --force
+      run: hugo deploy --config "configs/omr.toml" --maxDeletes=-1 --target "production" --force
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
