--- a/.github/workflows/staging-barcode.yml
+++ b/.github/workflows/staging-barcode.yml
@@ -43,9 +43,9 @@ jobs:
         replace: "logoImageSrc=\"https://cms.admin.containerize.com/"
         include: "_index.md"
     - name: Build BarCode
-      run: hugo --config "./config.toml" -c "content/barcode" -b "https://products-qa.aspose.com/barcode" --cleanDestinationDir --minify
+      run: hugo --config "configs/barcode.toml" -c "content/barcode" -b "https://products-qa.aspose.com/barcode" --cleanDestinationDir --minify
     - name: Deploy BarCode to S3
-      run: hugo deploy --config "./config.toml" --maxDeletes=-1 --target "barcode" --force
+      run: hugo deploy --config "configs/barcode.toml" --maxDeletes=-1 --target "staging" --force
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
