--- a/.github/workflows/production-font.yml
+++ b/.github/workflows/production-font.yml
@@ -37,9 +37,9 @@ jobs:
         replace: "logoImageSrc=\"https://cms.admin.containerize.com/"
         include: "_index.md"
     - name: Build Font
-      run: hugo --config "./config-prod.toml" -c "content/font" -b "https://products.aspose.com/font" --cleanDestinationDir --minify
+      run: hugo --config "configs/font.toml" -c "content/font" -b "https://products.aspose.com/font" --cleanDestinationDir --minify
     - name: Deploy Font to S3
-      run: hugo deploy --config "./config-prod.toml" --maxDeletes=-1 --target "font" --force
+      run: hugo deploy --config "configs/font.toml" --maxDeletes=-1 --target "production" --force
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
