--- a/.github/workflows/staging-drawing.yml
+++ b/.github/workflows/staging-drawing.yml
@@ -43,9 +43,9 @@ jobs:
         replace: "logoImageSrc=\"https://cms.admin.containerize.com/"
         include: "_index.md"
     - name: Build Drawing
-      run: hugo --config "./config-i18n.toml" -c "content/drawing" -b "https://products-qa.aspose.com/drawing" --cleanDestinationDir --minify
+      run: hugo --config "configs/drawing.toml" -c "content/drawing" -b "https://products-qa.aspose.com/drawing" --cleanDestinationDir --minify
     - name: Deploy Drawing to S3
-      run: hugo deploy --config "./config-i18n.toml" --maxDeletes=-1 --target "drawing" --force
+      run: hugo deploy --config "configs/drawing.toml" --maxDeletes=-1 --target "staging" --force
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
