--- a/.github/workflows/staging-words.yml
+++ b/.github/workflows/staging-words.yml
@@ -43,9 +43,9 @@ jobs:
         replace: "logoImageSrc=\"https://cms.admin.containerize.com/"
         include: "_index.md"
     - name: Build Words
-      run: hugo --config "./config.toml" -c "content/words" -b "https://products-qa.aspose.com/words" --cleanDestinationDir --minify
+      run: hugo --config "configs/words.toml" -c "content/words" -b "https://products-qa.aspose.com/words" --cleanDestinationDir --minify
     - name: Deploy Words to S3
-      run: hugo deploy --config "./config.toml" --maxDeletes=-1 --target "words" --force
+      run: hugo deploy --config "configs/words.toml" --maxDeletes=-1 --target "staging" --force
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
