--- a/.github/workflows/production-html.yml
+++ b/.github/workflows/production-html.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Build HTML
       run: hugo --config "./configs/html.toml" -c "content/html" -b "https://products.aspose.com/html" --cleanDestinationDir --minify
     - name: Deploy HTML to S3
-      run: hugo deploy --config "./config-prod.toml" --maxDeletes=-1 --target "html" --force
+      run: hugo deploy --config "./configs/html.toml" --maxDeletes=-1 --target "production" --force  
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
