--- a/.github/workflows/staging-html.yml
+++ b/.github/workflows/staging-html.yml
@@ -43,9 +43,9 @@ jobs:
         replace: "logoImageSrc=\"https://cms.admin.containerize.com/"
         include: "_index.md"
     - name: Build HTML
-      run: hugo --config "./config.toml" -c "content/html" -b "https://products-qa.aspose.com/html" --cleanDestinationDir --minify
+      run: hugo --config "./configs/html.toml" -c "content/html" -b "https://products-qa.aspose.com/html" --cleanDestinationDir --minify
     - name: Deploy HTML to S3
-      run: hugo deploy --config "./config.toml" --maxDeletes=-1 --target "html" --force
+      run: hugo deploy --config "./configs/html.toml" --maxDeletes=-1 --target "staging" --force
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
