--- a/.github/workflows/production-total.yml
+++ b/.github/workflows/production-total.yml
@@ -16,9 +16,9 @@ jobs:
           token: ${{ secrets.REPO_TOKEN }}
           fetch-depth: 0 
     - name: Setup Hugo
-      uses: peaceiris/actions-hugo@v2
+      uses: peaceiris/actions-hugo@v2.4.13
       with:
-          hugo-version: 'latest'
+          hugo-version: '0.101.0'
           extended: true
     - name: Install autoprefixer
       run:  npm install -D --save autoprefixer
