--- a/.github/workflows/staging-imaging.yml
+++ b/.github/workflows/staging-imaging.yml
@@ -14,7 +14,8 @@ jobs:
       with:
           repository: Aspose/products.aspose.com
           token: ${{ secrets.REPO_TOKEN }}
-          fetch-depth: 0 
+          fetch-depth: 0
+          ref: samer.el-khatib.IMAGINGNET-5456_with_content
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
       with:
