Disabled deployment for HTML & SVG due to switching to ZAP groups' workflow

--- a/.github/workflows/production-html.yml
+++ b/.github/workflows/production-html.yml
@@ -38,8 +38,8 @@ jobs:
         include: "_index.md"
     - name: Build HTML
       run: hugo --config "./configs/html.toml" -c "content/html" -b "https://products.aspose.com/html" --cleanDestinationDir --minify
-    - name: Deploy HTML to S3
-      run: hugo deploy --config "./configs/html.toml" --maxDeletes=-1 --target "production" --force  
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
+    # - name: Deploy HTML to S3
+      # run: hugo deploy --config "./configs/html.toml" --maxDeletes=-1 --target "production" --force  
+      # env:
+      #   AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
+      #   AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
