--- a/.github/workflows/production-svg.yml
+++ b/.github/workflows/production-svg.yml
@@ -38,8 +38,8 @@ jobs:
         include: "_index.md"
     - name: Build SVG
       run: hugo --config "./configs/svg.toml" -c "content/svg" -b "https://products.aspose.com/svg" --cleanDestinationDir --minify
-    - name: Deploy SVG to S3
-      run: hugo deploy --config "./configs/svg.toml" --maxDeletes=-1 --target "production" --force
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
+    # - name: Deploy HTML to S3
+      # run: hugo deploy --config "./configs/html.toml" --maxDeletes=-1 --target "production" --force  
+      # env:
+      #   AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
+      #   AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
