--- a/.github/workflows/staging-total.yml
+++ b/.github/workflows/staging-total.yml
@@ -29,9 +29,9 @@ jobs:
     - name: Find and replace domain name
       run: find . -type f -name '*.md' -exec sed -i '' s/products.aspose.com/products-qa.aspose.com/g {} +
     - name: Build Total
-      run: hugo --config "configs/total.toml" -c "content/total" -b "https://products-qa.aspose.com/total" --cleanDestinationDir --minify
+      run: hugo --config "configs/total.toml" -c "content/total" -b "https://products-qa.aspose.com/total" --cleanDestinationDir --minify --templateMetrics --templateMetricsHints
     - name: Deploy Total to S3
-      run: hugo deploy --config "configs/total.toml" --maxDeletes=-1 --target "staging" --force
+      run: hugo deploy --config "configs/total.toml" --maxDeletes=-1 --target "staging"
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
