--- a/.github/workflows/production-pub.yml
+++ b/.github/workflows/production-pub.yml
@@ -38,8 +38,8 @@ jobs:
         include: "_index.md"
     - name: Build PUB
       run: hugo --config "configs/pub.toml" -c "content/pub" -b "https://products.aspose.com/pub" --cleanDestinationDir --minify
-    - name: Deploy PUB to S3
-      run: hugo deploy --config "configs/pub.toml" --maxDeletes=-1 --target "production" --force
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
+    # - name: Deploy PUB to S3
+    #   run: hugo deploy --config "configs/pub.toml" --maxDeletes=-1 --target "production" --force
+    #   env:
+    #     AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
+    #     AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
