--- a/.github/workflows/production-slides.yml
+++ b/.github/workflows/production-slides.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install postcss-cli
       run:  npm install -D --save postcss-cli
     - name: Find and replace url param in frontmatter
-      run: find . -type f -name '*.md' -exec sed -i '' s/url:/url_ignore:/g {} +
+      run: LC_ALL=C find . -type f -name '*.md' -exec sed -i '' s/url:/url_ignore:/g {} +
     - name: Build Slides
       run: hugo --config "configs/slides.toml" -c "content/slides" -b "https://products.aspose.com/slides" --cleanDestinationDir --minify
     - name: Deploy Slides to S3
